# ai-embedded-dynamic-diversity

./: .gitignore  AGENTS.md  IMPLEMENTED.md  README.md  TODO.md  pyproject.toml
.agents/: README.md  handoff-latest-20260301-1100-orchestrator-z4r8.json  handoff-packet-template.md  handoff-protocol.md  return-protocol.md  skill-dynamic-diversity-research.md  subagent-convergence-operator.md  subagent-docs-handoff-curator.md  subagent-evaluation-auditor.md  subagent-orchestrator.md  subagent-viz-storyboard-operator.md
.claude/agents/: convergence-operator.md  docs-handoff-curator.md  evaluation-auditor.md  orchestrator.md  viz-storyboard-operator.md
docs/: ARTIFACTS.md  external-references.md  world-harness-gap-analysis-v1.md
scripts/: analyze_storyboard_metrics.py  bench.py  cross_eval.py  cross_report.py  export.py  gating_bench.py  hil.py  prelife.py  symbio_audit.py  sync_external_refs.ps1  train.py  train_parallel.py  viz.py
tests/: test_adaptation.py  test_bench_cli.py  test_conjoining.py  test_constructor_tape.py  test_cross_eval.py  test_cross_report.py  test_curriculum.py  test_embodiment_discovery.py  test_embodiments.py  test_humanoid_compliance.py  test_io_adapter.py  test_memory_bank.py  test_mimicry.py  test_multiscale_gating.py  test_objectives.py  test_parallel_cli.py  test_prelife.py  test_principles.py  test_qat.py  test_service.py  test_signaling.py  test_sim_profiler.py  test_streamer.py  test_switching.py  test_telemetry.py  test_train_transfer.py  test_v7_tape.py  test_viz_signatures.py  test_viz_storyboard.py  test_world_profiles.py
(+69 files in other folders)
